knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Lockbox__c/Corporate_Entity_Lockbox__c.object-meta.xml
<CustomObject>
    <description>Used by Corporate Compliance to track billing entities</description>
    <label>Corporate Entity Lockbox</label>
    <nameField>
        <displayFormat>LBX-{00000000}</displayFormat>
        <label>Lockbox Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Entity Lockboxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>