knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Lockbox__c/fields/Billing_Company__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company__c</fullName>
    <label>Billing Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caledonia</fullName>
            </value>
            <value>
                <fullName>Clinix</fullName>
            </value>
            <value>
                <fullName>EMBCC</fullName>
            </value>
            <value>
                <fullName>EPBS</fullName>
            </value>
            <value>
                <fullName>Hourly Account</fullName>
            </value>
            <value>
                <fullName>IDS</fullName>
            </value>
            <value>
                <fullName>LOYA</fullName>
            </value>
            <value>
                <fullName>Non-Billed</fullName>
            </value>
            <value>
                <fullName>Optimal</fullName>
            </value>
            <value>
                <fullName>PRehab</fullName>
            </value>
            <value>
                <fullName>Billed Under Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>