knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Lockbox__c/fields/BillingEndDate__c.field-meta.xml
<CustomField>
    <fullName>BillingEndDate__c</fullName>
    <label>Billing End Date</label>
    <type>Date</type>
</CustomField>