knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Lockbox__c/fields/BillingEntity__c.field-meta.xml
<CustomField>
    <fullName>BillingEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Corporate_Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lockboxes</relationshipLabel>
    <relationshipName>Lockboxes</relationshipName>
    <type>Lookup</type>
</CustomField>