knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Lockbox__c/fields/Exclude_From_RCS_Systems__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_RCS_Systems__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For IT Purposes

Used by an SSIS package to determine whether or not to integrate billing and facility data into RCS systems. 

Onbase tables:
cc_BillingCompany
cc_Facility_List

Encounter Id Service table:
Billing</description>
    <inlineHelpText>Exclude from Onbase and Encounter Id Service?</inlineHelpText>
    <label>Exclude From RCS Systems</label>
    <type>Checkbox</type>
</CustomField>