knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Lockbox__c/fields/Lockbox_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Lockbox_Account_Number__c</fullName>
    <label>Lockbox Account Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>