knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Lockbox__c/fields/Lockbox_Address__c.field-meta.xml
<CustomField>
    <fullName>Lockbox_Address__c</fullName>
    <label>Lockbox Address</label>
    <type>Address</type>
</CustomField>