knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Lockbox__c/fields/LockBox_Code__c.field-meta.xml
<CustomField>
    <fullName>LockBox_Code__c</fullName>
    <label>Lockbox Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>