knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Lockbox__c/fields/Mark_For_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Mark_For_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark For Deletion</label>
    <type>Checkbox</type>
</CustomField>