knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Lockbox__c/fields/Mark_For_Deletion_Comment__c.field-meta.xml
<CustomField>
    <fullName>Mark_For_Deletion_Comment__c</fullName>
    <label>Mark For Deletion Comment</label>
    <type>TextArea</type>
</CustomField>