knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Lockbox__c/fields/PhysicianEntity__c.field-meta.xml
<CustomField>
    <fullName>PhysicianEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Physician Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Corporate_Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Physician Entities</relationshipLabel>
    <relationshipName>Physician_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>